--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
             </section>
         </section>
 </main>
-
-
+<div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="#">Kapline</a>.
+</div>
 </body>
 </html>
