--- a/index.html
+++ b/index.html
@@ -20,33 +20,38 @@
 
 <main class="card">
 
-    <section class="main_image">
-        <img src="images/image-header-desktop.jpg" alt="Office image" class="image">
-        <img src="images/image-header-mobile.jpg" alt="Office image" class="image_mobile">
-    </section>
+    <div class="main_image">
+        <img src="images/image-header-desktop.jpg"
+             alt="Office image"
+             srcset="images/image-header-desktop.jpg 540w,
+                     images/image-header-mobile.jpg 654w"
+             sizes="(max-width: 600px) 654px, 540px"
+             class="image">
+    </div>
 
-    <section class="info">
+    <div class="info">
         <h1>Get <b>insights</b> that help your business grow.</h1>
 
         <p class="description">Discover the benefits of data analytics and make better decisions regarding revenue,
                                customer experience, and overall efficiency.</p>
 
-        <section class="stats">
-            <section class="stat_1">
+        <div class="stats">
+            <div class="stat_1">
                 <h2>10k+</h2>
                 <p class="stat_text">companies</p>
-            </section>
+            </div>
 
-            <section class="stat_2">
+            <div class="stat_2">
                 <h2>314</h2>
                 <p class="stat_text">templates</p>
-            </section>
+            </div>
 
-            <section class="stat_3">
+            <div class="stat_3">
                 <h2>12m+</h2>
-                <p class="stat_text">queries</p></section>
-            </section>
-        </section>
+                <p class="stat_text">queries</p>
+            </div>
+        </div>
+    </div>
 </main>
 <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
