--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
         </div>
     </div>
 </main>
-<div class="attribution">
+
+<footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Kapline</a>.
-</div>
+</footer>
+
 </body>
 </html>
