--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
 </main>
 
 <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Kapline</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener">Frontend
+                                                                                                      Mentor</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/TrueKapline" target="_blank" rel="noopener">Kapline</a>.
 </footer>
 
 </body>
